--- a/.github/pr-badge.yml
+++ b/.github/pr-badge.yml
@@ -1,5 +1,5 @@
 label: "JIRA"
 url: "https://kidsnote.atlassian.net/browse/$issuePrefix"
 message: "$issuePrefix"
-color: "0052CC"
+color: "EFEFCC"
 when: "$issuePrefix" 
