--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,5 +9,6 @@ jobs:
     steps:
       - run: |
           echo A comment on PR $NUMBER
+          git rev-parse --abbrev-ref HEAD 
         env:
           NUMBER: ${{ github.event.issue.number }}
