--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/checkout@v2
         with: 
           fetch-depth: 0
+          ref: ${{ github.ref }}
       - run: |
           echo A comment on PR $NUMBER
           git rev-parse --abbrev-ref HEAD 
