--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
         with: 
           fetch-depth: 0
-          ref: ${GITHUB_REF#refs/heads/}
+          ref: ${{ github.head_ref }}
       - run: |
           echo A comment on PR $NUMBER
           git rev-parse --abbrev-ref HEAD 
