--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,3 +13,5 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ steps.branch-names.outputs.head_ref_branch }}
+      - run: | 
+          echo ${{ steps.branch-names.outputs.head_ref_branch }}
