--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,9 @@ jobs:
       - name: Get branch names.
         id: branch-names
         uses: tj-actions/branch-names@v5.1
+      - name: Current branch name
+        run: |
+          echo "${{ steps.branch-name.outputs.current_branch }}"
       - uses: actions/checkout@v2
         with:
           ref: ${{ steps.branch-names.outputs.head_ref_branch }}
