--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,32 @@
-on: issue_comment
+name: Checkout PR on comment
 
+on:
+  issue_comment:
+    # triggers on created, edited and deleted by default, you may wanna restrict it, e.g.:
+    #types: [created]
 jobs:
-  pr_commented:
-    # This job only runs for pull request comments 
-    name: PR comment
-    if: ${{ github.event.issue.pull_request }}
+  pr-commented:
+    name: PR commented
+    if: github.event.issue.pull_request
     runs-on: ubuntu-latest
     steps:
-      - name: Get branch names.
-        id: branch-names
-        uses: tj-actions/branch-names@v5.1
-      - name: Current branch name
-        run: |
-          echo "${{ steps.branch-name.outputs.current_branch }}"
+      - uses: actions/github-script@v3
+        id: get-pr
+        with:
+          script: |
+            const request = {
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.issue.number
+            }
+            core.info(`Getting PR #${request.pull_number} from ${request.owner}/${request.repo}`)
+            try {
+              const result = await github.pulls.get(request)
+              return result.data
+            } catch (err) {
+              core.setFailed(`Request failed with error ${err}`)
+            }
       - uses: actions/checkout@v2
         with:
-          ref: ${{ steps.branch-names.outputs.head_ref_branch }}
-      - run: | 
-          echo ${{ steps.branch-names.outputs.head_ref_branch }}
+          repository: ${{ fromJSON(steps.get-pr.outputs.result).head.repo.full_name }}
+          ref: ${{ fromJSON(steps.get-pr.outputs.result).head.sha }} # or .head.ref for branch name
