--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,38 +10,9 @@ jobs:
     if: github.event.issue.pull_request && github.event.comment.body == '/deploy'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/github-script@v3
-        id: get-pr
-        with:
-          script: |
-            const request = {
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: context.issue.number
-            }
-            core.info(`Getting PR #${request.pull_number} from ${request.owner}/${request.repo}`)
-            try {
-              const result = await github.pulls.get(request)
-              console.log(result.data)
-              return result.data
-            } catch (err) {
-              core.setFailed(`Request failed with error ${err}`)
-            }
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-          repository: ${{ fromJSON(steps.get-pr.outputs.result).head.repo.full_name }}
-          ref: ${{ fromJSON(steps.get-pr.outputs.result).head.sha }} # or .head.ref for branch name
-      # - id: deploy
-      #   run: make feature-dev-upload
-      
-      - uses: actions/github-script@v5
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: '🚀 테스트 배포완료 되었습니다 @techinpark'
-            })
+      - name: Set selected color
+        run: echo '::set-output name=SELECTED_COLOR::green'
+        
+        id: random-color-generator
+      - name: Get color
+        run: echo "The selected color is ${{ steps.random-color-generator.outputs.SELECTED_COLOR }}"
